deploy-pacman/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-deployment
  labels:
    app: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: ghcr.io/tiagoafonsoalves/pacman:2.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
