deploy-pacman/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: pacman
  ports:
    - port: 80
      targetPort: 80
